Header is Done :)

--- a/src/index.css
+++ b/src/index.css
@@ -134,3 +134,15 @@ table {
 *::before {
   box-sizing: border-box;
 }
+
+:root {
+  --project-font: "poppins regular";
+  --primary: #C90000;
+  --secondary: #FFC300;
+  --secondary-light: #FFF6A3;
+  --black-1: #323232;
+  --black-2: #504F4F;
+  --grey: #7D7C7C;
+  --grey-2: ##E3E3E3;
+  --grey-3: ##F1F1F1;
+}
