--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,6 @@ table {
   --black-1: #323232;
   --black-2: #504F4F;
   --grey: #7D7C7C;
-  --grey-2: ##E3E3E3;
-  --grey-3: ##F1F1F1;
+  --grey-2: #E3E3E3;
+  --grey-3: #F1F1F1;
 }
