--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   font-family: var(--project-font);
   width: 100vw;
 
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: minmax(320px, 1440px);
   justify-content: center;
 }
 
@@ -16,4 +16,3 @@
   max-width: 1440px;
   width: 100%;
 }
-
