--- a/components/MenuSection/MenuSection.css
+++ b/components/MenuSection/MenuSection.css
@@ -42,6 +42,31 @@
     max-width: fit-content;
 }
 
+.menu-main{
+    margin-top: 2.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+}
+
+.menu-main > .menu-item-container:nth-child(n+4) {
+    display: none;
+}
+
+.menu-bottom {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.menu-bottom h6{
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 500;
+    color: var(--black-2);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 @media (min-width: 645px) {
     .menu-top h4{
         font-size: 48px;
@@ -53,5 +78,27 @@
         height: 9px;
         bottom: 18px;
         z-index: -2;
+    }
+}
+
+@media (min-width: 775px) {
+    .menu-main{
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 1rem;
+        column-gap: 1rem;
+    }
+
+    .menu-main > .menu-item-container:nth-child(4) {
+        display: grid;
+    }
+}
+
+@media (min-width: 1142px) {
+    .menu-main{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .menu-main > .menu-item-container:nth-child(n) {
+        display: grid;
     }
 }
