--- a/components/MenuItem/MenuItem.css
+++ b/components/MenuItem/MenuItem.css
@@ -4,6 +4,7 @@
     border-radius: 12px;
     padding: 16px;
     border: 1px solid var(--grey-2);
+    position: relative;
 
     display: grid;
     row-gap: 8px;
@@ -74,6 +75,13 @@
 .add-icon{
     font-size: 30px;
     color: #fff;
+}
+
+.sale-badge{
+    position: absolute;
+    width: 60px !important;
+    top: 10px;
+    left: 10px;
 }
 
 @media (min-width: 380px) {
