--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -60,7 +60,7 @@
 }
 
 .side-menu-container {
-    position: absolute;
+    position: sticky;
     top: 0;
     left: -254.8px;
     width: fit-content;
